--- a/main.css
+++ b/main.css
@@ -32,13 +32,14 @@ body {
 }
 
 #choices {
-  height: 200px;
-  width: 200px;
+  height: auto;
+  width: auto;
   text-align: center;
 }
 
 .btn {
-    font-size: large;
+    font-size: x-large;
+    align-items: center;
 }
 
 .start-btn {
@@ -58,6 +59,8 @@ body {
   text-align: center;
   text-decoration: none;
   font-size: 25px;
-  margin: 5px
+  margin: 5px;
+  height: auto;
+  width: auto;
 
 }
